<resources>
    <string name="app_name">Desserts</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cart_header">Your Orders:</string>
    <string name="cake_price_placeholder"><b>$price</b></string>
    <string name="cake_prev_title">prev_title</string>
    <string name="cake_next_title">next_title</string>
    <string name="cake_title"><b>title</b></string>
    <string name="cake_view"><b>View</b></string>
    <string name="details_title"><b>details_title</b></string>
    <string name="cart_text">add to cart</string>
    <string name="details_back"><b>Back</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_viewed_selection">Top Viewed Selection</string>
    <string name="top_view_subtitle">Browse our collection of the most popular desserts</string>
    <string name="total_cost_placeholder">Total Cost: $0</string>
</resources>