<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/cake_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:translationZ="12dp"
        android:elevation="0dp"

        android:background="@drawable/line"
        app:layout_constraintBottom_toTopOf="@+id/cake_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cake_price_card"
        />

<!--    START ITEM CARD   -->
    <ImageView
        android:id="@+id/cake_start_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="12dp"
        android:background="@drawable/dot"
        app:layout_constraintBottom_toTopOf="@+id/cake_add_button"
        app:layout_constraintEnd_toEndOf="@+id/cake_info_card_start"
        app:layout_constraintStart_toStartOf="@+id/cake_info_card_start"
        app:layout_constraintTop_toBottomOf="@+id/cake_price_card"
        />

    <TextView
        android:id="@+id/cake_prev_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="12dp"
        android:text="@string/cake_prev_title"
        android:textColor="@color/burgundy"
        app:layout_constraintTop_toBottomOf="@+id/cake_start_dot"
        app:layout_constraintEnd_toEndOf="@+id/cake_info_card_start"
        app:layout_constraintStart_toStartOf="@+id/cake_info_card_start"
        app:layout_constraintBottom_toBottomOf="@+id/cake_info_card_start"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cake_info_card_start"
        android:layout_width="108dp"
        android:layout_height="240dp"
        android:layout_marginEnd="@dimen/margin_padding_size_small"
        android:layout_marginTop="160dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cake_image_card"
        app:layout_constraintEnd_toStartOf="@+id/cake_info_card_mid"
        />

<!--    MID ITEM CARD   -->
    <TextView
        android:id="@+id/cake_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="12dp"
        android:text="@string/cake_price_placeholder"
        android:textColor="@color/light_creme"
        app:layout_constraintTop_toTopOf="@+id/cake_price_card"
        app:layout_constraintEnd_toEndOf="@+id/cake_price_card"
        app:layout_constraintStart_toStartOf="@+id/cake_price_card"
        app:layout_constraintBottom_toBottomOf="@+id/cake_price_card"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cake_price_card"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:translationZ="9dp"
        app:cardCornerRadius="30dp"
        android:elevation="0dp"
        android:backgroundTint="@color/cherry"
        app:layout_constraintTop_toTopOf="@+id/cake_info_card_mid"
        app:layout_constraintBottom_toTopOf="@+id/cake_mid_dot"
        app:layout_constraintEnd_toEndOf="@+id/cake_info_card_mid"
        app:layout_constraintStart_toStartOf="@+id/cake_info_card_mid"
        />

    <ImageView
        android:id="@+id/cake_mid_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="12dp"
        android:background="@drawable/dot"
        app:layout_constraintBottom_toTopOf="@+id/cake_add_button"
        app:layout_constraintEnd_toEndOf="@+id/cake_info_card_mid"
        app:layout_constraintStart_toStartOf="@+id/cake_info_card_mid"
        app:layout_constraintTop_toBottomOf="@+id/cake_price_card"
        />

    <ImageButton
        android:id="@+id/cake_add_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_baseline_add_circle"
        android:backgroundTint="@color/burgundy"
        android:foregroundTint="@color/burgundy"
        android:translationZ="9dp"
        app:layout_constraintBottom_toTopOf="@+id/cake_title_card"
        app:layout_constraintEnd_toEndOf="@+id/cake_info_card_mid"
        app:layout_constraintStart_toStartOf="@+id/cake_info_card_mid"
        app:layout_constraintTop_toBottomOf="@+id/cake_mid_dot" />

    <TextView
        android:id="@+id/cake_mid_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="12dp"
        android:text="@string/cake_title"
        android:textColor="@color/light_creme"
        app:layout_constraintTop_toTopOf="@+id/cake_title_card"
        app:layout_constraintEnd_toEndOf="@+id/cake_title_card"
        app:layout_constraintStart_toStartOf="@+id/cake_title_card"
        app:layout_constraintBottom_toBottomOf="@+id/cake_title_card"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cake_title_card"
        android:layout_width="88dp"
        android:layout_height="100dp"
        android:translationZ="8dp"
        app:cardCornerRadius="24dp"
        android:elevation="0dp"
        android:backgroundTint="@color/burgundy"
        app:layout_constraintTop_toBottomOf="@+id/cake_add_button"
        app:layout_constraintBottom_toBottomOf="@+id/cake_info_card_mid"
        app:layout_constraintStart_toStartOf="@+id/cake_info_card_mid"
        app:layout_constraintEnd_toEndOf="@+id/cake_info_card_mid"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cake_info_card_mid"
        android:layout_width="108dp"
        android:layout_height="240dp"
        android:layout_marginTop="160dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cake_image_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/cake_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cake_view"
        android:textColor="@color/burgundy"
        android:translationZ="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/cake_title_card"
        app:layout_constraintStart_toStartOf="@+id/cake_title_card"
        app:layout_constraintTop_toBottomOf="@+id/arrow" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_baseline_south_24"
        android:backgroundTint="@color/burgundy"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cake_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cake_title_card" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="100dp"
        android:background="@drawable/item_bg"
        android:layout_marginTop="120dp"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cake_image_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cake_title_card" />

<!--    END ITEM CARD   -->
    <ImageView
        android:id="@+id/cake_end_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="12dp"
        android:background="@drawable/dot"
        app:layout_constraintBottom_toTopOf="@+id/cake_add_button"
        app:layout_constraintEnd_toEndOf="@+id/cake_info_card_end"
        app:layout_constraintStart_toStartOf="@+id/cake_info_card_end"
        app:layout_constraintTop_toBottomOf="@+id/cake_price_card"
        />

    <TextView
        android:id="@+id/cake_next_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="12dp"
        android:text="@string/cake_next_title"
        android:textColor="@color/burgundy"
        app:layout_constraintTop_toBottomOf="@+id/cake_end_dot"
        app:layout_constraintEnd_toEndOf="@+id/cake_info_card_end"
        app:layout_constraintStart_toStartOf="@+id/cake_info_card_end"
        app:layout_constraintBottom_toBottomOf="@+id/cake_info_card_end"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cake_info_card_end"
        android:layout_width="108dp"
        android:layout_height="240dp"
        android:layout_marginStart="@dimen/margin_padding_size_small"
        android:layout_marginTop="160dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cake_image_card"
        app:layout_constraintStart_toEndOf="@+id/cake_info_card_mid"
        />

<!--    IMAGE CARD VIEW     -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cake_image_card"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        android:layout_marginTop="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="-40dp" >

        <ImageView
            android:id="@+id/cake_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/cake7_3"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>