<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.fragments.DetailsCakesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!--    IMAGE CARD VIEW     -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cake_image_details"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:translationZ="-1dp"
            app:layout_constraintBottom_toTopOf="@+id/cake_details_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/cake_title_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_title"
            android:textColor="@color/burgundy"
            android:translationZ="12dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cake_image_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/cake_price_card"
            />

        <TextView
            android:id="@+id/cake_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cake_price_placeholder"
            android:translationZ="12dp"
            android:textColor="@color/light_creme"
            app:layout_constraintTop_toTopOf="@+id/cake_price_card"
            app:layout_constraintEnd_toEndOf="@+id/cake_price_card"
            app:layout_constraintStart_toStartOf="@+id/cake_price_card"
            app:layout_constraintBottom_toBottomOf="@+id/cake_price_card"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cake_price_card"
            android:layout_width="88dp"
            android:layout_height="30dp"
            app:cardCornerRadius="20dp"
            android:elevation="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/cherry"
            app:layout_constraintTop_toBottomOf="@+id/cake_title_details"
            app:layout_constraintBottom_toTopOf="@+id/cake_descrip_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/cake_descrip_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cake item description"
            android:textColor="@color/burgundy"
            android:translationZ="12dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cake_title_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/diets_suitable_for"
            />

        <TextView
            android:id="@+id/diets_suitable_for_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Suitable for the following diets:"
            android:textColor="@color/burgundy"
            android:textStyle="bold"
            android:translationZ="12dp"
            app:layout_constraintTop_toBottomOf="@+id/cake_descrip_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/diets_suitable_for"
            />

        <TextView
            android:id="@+id/diets_suitable_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="diets suitable for"
            android:textColor="@color/burgundy"
            android:translationZ="12dp"
            app:layout_constraintTop_toBottomOf="@+id/cake_descrip_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cake_add_button_details"
            />

        <Button
            android:id="@+id/cake_add_button_details"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_baseline_add"
            android:drawableTint="@color/light_creme"
            android:backgroundTint="@color/pale_burgundy"
            android:text="@string/cart_text"
            android:textColor="@color/light_creme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cake_descrip_details" />

        <TextView
            android:id="@+id/cake_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_back"
            android:textColor="@color/burgundy"
            android:translationZ="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/cake_image_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrow" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="24dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_baseline_south_24"
            android:backgroundTint="@color/burgundy"
            android:scaleY="-1"
            android:translationZ="12dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cake_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="108dp"
            android:layout_height="56dp"
            android:scaleY="-1"
            android:layout_marginBottom="-8dp"
            android:background="@drawable/item_bg"
            app:layout_constraintBottom_toBottomOf="@+id/cake_image_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/cake_start_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="12dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/dot"
            android:backgroundTint="@color/light_creme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cake_mid_dot"
            app:layout_constraintStart_toStartOf="@+id/cake_price_card"
            />

        <ImageView
            android:id="@+id/cake_mid_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="12dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/dot"
            android:backgroundTint="@color/light_creme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cake_end_dot"
            app:layout_constraintStart_toEndOf="@+id/cake_start_dot"
            />

        <ImageView
            android:id="@+id/cake_end_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="12dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/dot"
            android:backgroundTint="@color/light_creme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cake_price_card"
            app:layout_constraintStart_toEndOf="@+id/cake_mid_dot"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cake_details_card"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/cake_image_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>