<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <ImageView
        android:id="@+id/frozen_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:translationZ="17dp"
        android:elevation="0dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toTopOf="@+id/frozen_title_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frozen_price_card"
        />

    <!--    START ITEM CARD   -->


    <!--    MID ITEM CARD   -->
    <TextView
        android:id="@+id/frozen_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="20dp"
        android:text="@string/cake_price_placeholder"
        android:textColor="@color/light_creme"
        app:layout_constraintTop_toTopOf="@+id/frozen_price_card"
        app:layout_constraintEnd_toEndOf="@+id/frozen_price_card"
        app:layout_constraintStart_toStartOf="@+id/frozen_price_card"
        app:layout_constraintBottom_toBottomOf="@+id/frozen_price_card"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/frozen_price_card"
        android:layout_width="88dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cherry"
        android:elevation="0dp"
        android:translationZ="17dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@+id/frozen_mid_dot"
        app:layout_constraintEnd_toEndOf="@+id/frozen_info_card_mid"
        app:layout_constraintStart_toStartOf="@+id/frozen_info_card_mid"
        app:layout_constraintTop_toTopOf="@+id/frozen_info_card_mid" />

    <ImageView
        android:id="@+id/frozen_mid_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="17dp"
        android:background="@drawable/dot"
        android:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/frozen_title_card"
        app:layout_constraintEnd_toEndOf="@+id/frozen_info_card_mid"
        app:layout_constraintStart_toStartOf="@+id/frozen_info_card_mid"
        app:layout_constraintTop_toBottomOf="@+id/frozen_price_card"
        />

    <ImageButton
        android:id="@+id/frozen_add_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_baseline_add_circle"
        android:backgroundTint="@color/burgundy"
        android:translationZ="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/frozen_info_card_mid"
        app:layout_constraintEnd_toEndOf="@+id/frozen_info_card_mid"
        app:layout_constraintStart_toStartOf="@+id/frozen_info_card_mid"
        app:layout_constraintTop_toBottomOf="@+id/frozen_title_card" />

    <TextView
        android:id="@+id/frozen_mid_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationZ="19dp"
        android:text="@string/cake_title"
        android:textColor="@color/light_creme"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/frozen_title_card"
        app:layout_constraintEnd_toEndOf="@+id/frozen_title_card"
        app:layout_constraintStart_toStartOf="@+id/frozen_title_card"
        app:layout_constraintBottom_toBottomOf="@+id/frozen_title_card"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/frozen_title_card"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:translationZ="16dp"
        app:cardCornerRadius="24dp"
        android:elevation="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/burgundy"
        app:layout_constraintTop_toBottomOf="@+id/frozen_mid_dot"
        app:layout_constraintBottom_toTopOf="@+id/frozen_add_button"
        app:layout_constraintStart_toStartOf="@+id/frozen_info_card_mid"
        app:layout_constraintEnd_toEndOf="@+id/frozen_info_card_mid"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/frozen_info_card_mid"
        android:layout_width="224dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frozen_image_card"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:id="@+id/frozen_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/cake_view"
        android:textColor="@color/burgundy"
        android:translationZ="17dp"
        app:layout_constraintBottom_toTopOf="@+id/frozen_price_card"
        app:layout_constraintEnd_toEndOf="@+id/frozen_title_card"
        app:layout_constraintStart_toStartOf="@+id/frozen_title_card"
        app:layout_constraintTop_toBottomOf="@+id/arrow" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_baseline_south_24"
        android:backgroundTint="@color/burgundy"
        android:elevation="20dp"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frozen_view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="100dp"
        android:background="@drawable/item_bg"
        android:elevation="16dp"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@+id/frozen_price_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frozen_image_card" />


    <!--    IMAGE CARD VIEW     -->
    <androidx.cardview.widget.CardView
        android:id="@+id/frozen_image_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="-120dp"
        android:layout_marginEnd="-30dp"
        app:cardCornerRadius="300dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/frozen_info_card_mid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="3">

        <ImageView
            android:id="@+id/frozen_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/icecream4_1" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>